test/errors/sql_tables_error/zs/virtual_column_error.zs
package virtual_column_error;

sql_table TestTable
{
    int32               columnA;
    sql_virtual string  columnB;
};
